[backend/frontend] Fix Caldera restart